Fix button not centered

--- a/src/styles/controls/floating-component.css
+++ b/src/styles/controls/floating-component.css
@@ -35,14 +35,7 @@
     z-index: 300;
 }
 
-.control.is-animating {
-    /* position: relative; */
-    position: absolute;
-    top: -29px;
-    left: 0;
-    right: 0;
-    z-index: 299;
-}
+
 
 
 .control svg {
